--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>${org.aspectj-version}</version>
 		</dependency>
-		
+
 		<!-- Database -->
 		<dependency>
 			<groupId>postgresql</groupId>
@@ -130,6 +130,12 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.4</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -177,6 +183,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		
+
 	</build>
 </project>
