--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<org.aspectj-version>1.7.4</org.aspectj-version>
 		<org.slf4j-version>1.7.5</org.slf4j-version>
 		<jackson.databind-version>2.2.3</jackson.databind-version>
+		<mockito.version>1.9.5</mockito.version>
 		<powermock.version>1.5.5</powermock.version>
 	</properties>
 	<dependencies>
@@ -140,7 +141,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>1.8.4</version>
+			<version>${mockito.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
