--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,11 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<listener>  
+		<listener-class>  
+		  com.sun.xml.ws.transport.http.servlet.WSServletContextListener  
+		</listener-class>  
+	</listener>  
 
 	<!-- Processes application requests -->
 	<servlet>
@@ -30,4 +35,13 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+    <servlet>
+        <servlet-name>HotelService</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>HotelService</servlet-name>
+        <url-pattern>/soap</url-pattern>
+    </servlet-mapping>	
 </web-app>
